--- a/g3 architech.html
+++ b/g3 architech.html
@@ -1,20 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> g3 architech</title>
-<link rel="stylesheet" href="stl/architech.css".css">
+    <link rel="stylesheet" href="stl/architech.css" .css">
 </head>
-<body>
-    <header>
+
+<body class="work-sans-font">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architect</h3>
+            <ul class="nav-link display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contac us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login </a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-titel">Brand New
+                    Group of Architects
+                </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-img" src="./P/banner.png" alt="">
+
+
+        </div>
 
     </header>
     <main>
+        <!--team section-->
+        <section class=" teams display-flex">
+            <div class="team-img-container">
+                <img src="./P/team1.png" alt="">
+                <img src="./P/team2.png" alt="">
+                <img src="./P/team3.png" alt="">
+                <img src="./P/team4.png" alt="">
+
+            </div>
+            <div class="our-features">
+                <h3 class="feature-titel"><span id="list" class="text-lightgray">Quick list</span> <span>of Our</span>
+                    <span class="text-primary">Features</span>
+                </h3>
+                <p class="feature-description text-lightgray">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features we enjoy-->
+        <section>
+            <h3 class="section-titel"> Some Fact </h3>
+            <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
+            <div class="fact-container">
+
+                <div class="fact-card">
+                    <img src="./P/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">15</h4>
+                    <h5 class="fact-name">Award Winning</h5>
+                </div>
+                <div class="fact-card">
+                    <img src="./P/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                </div>
+                <div class="fact-card">
+                    <img src="./P/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">clients Wroked</h5>
+                </div>
+
+                <div class="fact-card">
+                    <img src="./P/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">2278</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                </div>
+
+
+
+
+            </div>
+
+        </section>
+        <!-- some fact-->
+        <section>
+
+        </section>
 
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
