add some section and responsive

--- a/g3 architech.html
+++ b/g3 architech.html
@@ -55,33 +55,43 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <!-- features we enjoy-->
+        <!-- some fact-->
         <section>
             <h3 class="section-titel"> Some Fact </h3>
-            <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority
+            <p class="text-lightgray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
                 have suffered alteration.</p>
+
             <div class="fact-container">
 
-                <div class="fact-card">
-                    <img src="./P/icons/ribon.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">15</h4>
-                    <h5 class="fact-name">Award Winning</h5>
+                <div class="fact-card display-flex">
+
+                    <div>
+                        <img src="./P/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">15</h4>
+                        <h5 class="fact-name">Award Winning</h5>
+                    </div>
                 </div>
-                <div class="fact-card">
-                    <img src="./P/icons/projects.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">1458</h4>
-                    <h5 class="fact-name">Project Finished</h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./P/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
                 </div>
-                <div class="fact-card">
-                    <img src="./P/icons/customers.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">590</h4>
-                    <h5 class="fact-name">clients Wroked</h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./P/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">clients Wroked</h5>
+                    </div>
                 </div>
 
-                <div class="fact-card">
-                    <img src="./P/icons/email.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">2278</h4>
-                    <h5 class="fact-name">Email Send</h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./P/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">2278</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
                 </div>
 
 
@@ -90,8 +100,20 @@
             </div>
 
         </section>
-        <!-- some fact-->
-        <section>
+        <!-- our sponsor-->
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-titel">Our sponsor</h3>
+                <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="./P/sponsors/amazon.png" alt="">
+                <img src="./P/sponsors/figma.png" alt="">
+                <img src="./P/sponsors/google.png" alt="">
+                <img src="./P/sponsors/spotify.png" alt="">
+                <img src="./P/sponsors/telerama.png" alt="">
+            </div>
+
 
         </section>
 
