--- a/g3 architech.html
+++ b/g3 architech.html
@@ -55,10 +55,59 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- Feature section start-->
+        <section class="Features display-flex">
+            <div>
+                <h3 id="feature-section-titel" class="section-titel">Features you will love & enjoy</h3>
+                <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <!--feature card container-->
+                <div class="feature-card">
+                    <h4 class="feature-titel">Dexktop & Mobile Version</h4>
+                    <p class="text-lightgary">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-titel">Dexktop & Mobile Version</h4>
+                    <p class="text-lightgary">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-titel">Dexktop & Mobile Version</h4>
+                    <p class="text-lightgary">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-titel">Dexktop & Mobile Version</h4>
+                    <p class="text-lightgary">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+
+                </div>
+
+
+
+            </div>
+            <div class="featured-architect">
+                <img src="./P/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year"> 10 Years+ </span>
+                    <br>
+                    <span class="experience">Experience</span>
+                </button>
+
+
+            </div>
+
+        </section>
         <!-- some fact-->
         <section>
             <h3 class="section-titel"> Some Fact </h3>
-            <p class="text-lightgray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
+            <p class="text-lightgray fact-description">There are many variations of passages of Lorem Ipsum available,
+                but the majority
                 have suffered alteration.</p>
 
             <div class="fact-container">
@@ -104,7 +153,8 @@
         <section class="our-sponsors">
             <div class="sponsor-info">
                 <h3 class="section-titel">Our sponsor</h3>
-                <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
             </div>
             <div class="sponsor-companies">
                 <img src="./P/sponsors/amazon.png" alt="">
@@ -118,8 +168,8 @@
         </section>
 
     </main>
-    <footer>
-
+    <footer class="footer-bg">
+        <p class="footer-tex text-lightgary">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
