--- a/g3 architech.html
+++ b/g3 architech.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <!--team section-->
-        <section class=" teams display-flex">
+        <section class=" teams display-flex shared-width spacing">
             <div class="team-img-container">
                 <img src="./P/team1.png" alt="">
                 <img src="./P/team2.png" alt="">
@@ -45,7 +45,7 @@
                 <img src="./P/team4.png" alt="">
 
             </div>
-            <div class="our-features">
+            <div>
                 <h3 class="feature-titel"><span id="list" class="text-lightgray">Quick list</span> <span>of Our</span>
                     <span class="text-primary">Features</span>
                 </h3>
@@ -56,12 +56,15 @@
             </div>
         </section>
         <!-- Feature section start-->
-        <section class="Features display-flex">
+        <section class="features display-flex shared-width spacing">
             <div>
-                <h3 id="feature-section-titel" class="section-titel">Features you will love & enjoy</h3>
-                <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                    look even</p>
+                <div>
+                    <h3 id="feature-section-titel" class="section-titel">Features you will love & enjoy</h3>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't
+                        look even</p>
+                </div>
                 <!--feature card container-->
                 <div class="feature-card">
                     <h4 class="feature-titel">Dexktop & Mobile Version</h4>
@@ -104,7 +107,7 @@
 
         </section>
         <!-- some fact-->
-        <section>
+        <section class="shared-width spacing">
             <h3 class="section-titel"> Some Fact </h3>
             <p class="text-lightgray fact-description">There are many variations of passages of Lorem Ipsum available,
                 but the majority
@@ -150,7 +153,7 @@
 
         </section>
         <!-- our sponsor-->
-        <section class="our-sponsors">
+        <section class="our-sponsors shared-width spacing">
             <div class="sponsor-info">
                 <h3 class="section-titel">Our sponsor</h3>
                 <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the
@@ -168,7 +171,7 @@
         </section>
 
     </main>
-    <footer class="footer-bg">
+    <footer class="footer-bg shared-width spacing">
         <p class="footer-tex text-lightgary">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
